Updated HTML and CSS

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,34 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <h1>Hello</h1>
+    <div id="background">
+    <h1>Tic Tac Toe</h1>
+
+    <div id="gameboard">
+      <div class="row">
+        <div class="cell lt x">X</div>
+        <div class="cell mt o">O</div>
+        <div class="cell rt x">X</div>
+      </div>
+
+      <div class="row">
+        <div class="cell lm o">O</div>
+        <div class="cell mm x">X</div>
+        <div class="cell rm o">O</div>
+      </div>
+
+      <div class="row">
+        <div class="cell lb x">X</div>
+        <div class="cell mb o">O</div>
+        <div class="cell rb x">X</div>
+      </div>
+
+  </div>
+
+<div id="play">
+        <button type="button" class="button">Play Again</button>
+      </div>
+</div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 
@@ -35,4 +62,5 @@
         <script src="scripts/app.js"></script>
         <!-- endbuild -->
 </body>
+<footer>&copy Sophia Raji 2013.</footer>
 </html>
