--- a/app/splash.html
+++ b/app/splash.html
@@ -15,28 +15,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
 </head>
-
-
-  <body data-ng-app="tickeyApp">
-    <header>
-      <div id="background">
-        <h1>Tic Tac Toe</h1>
-        <div data-ng-view></div>
-      </div>
-    </header>
-
-<!--  <p>home {{hideHome}}</p>
-      <p>game {{hideGameBoard}}</p>
-      <p>howto {{hideHowTo}}</p> -->
-
-
-
-    <nav>
-        <a href="#/" data-ng-hide="hideHome">Home</a>
-        <a href="#/main" data-ng-hide="hideGameBoard">Play Game</a>
-        <a href="#/howto" data-ng-hide="hideHowTo">How To</a>
-    </nav>
-
+  <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -47,26 +26,15 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <h1>WELCOME</h1>
+    <div class="start"><a href="index.html">Start Playing</a></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/angular-localstorage/angular-local-storage.js"></script>
-        <script src="https://cdn.firebase.com/v0/firebase.js"></script>
-        <script src="https://cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
-
         <script src="scripts/app.js"></script>
-
-
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/gameboard.js"></script>
-        <script src="scripts/controllers/matchplayer.js"></script>
-        <script src="scripts/controllers/howto.js"></script>
-        <script src="scripts/directives/tickle_me.js"></script>
-        <script src="scripts/controllers/multiplayer.js"></script>
         <!-- endbuild -->
 </body>
-<footer>&copy; Sophia Raji 2013.</footer>
+<footer>&copy Sophia Raji 2013.</footer>
 </html>
